--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi>=0.95.0
 uvicorn>=0.21.1
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 python-jose>=3.3.0
 python-multipart>=0.0.6
 openai>=1.0.0
